[build-system]
requires = ["setuptools>=42", "wheel", "numpy"]

build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
allow_untyped_defs = false
allow_any_generics = false
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "U", "YTT", "B", "C4", "PT", "Q"]
ignore = ["E203", "B028", "B905", "C408"]
preview = true
